<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.location.MapFragment">

    <include
        layout="@layout/fragment_location_maps"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0"
        android:layout_marginBottom="@dimen/height_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/height_220"
        android:background="@drawable/bg_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_2"
            android:layout_marginTop="@dimen/margin_padding_5"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_20"
            android:layout_marginTop="@dimen/margin_padding_30"
            android:fontFamily="sans-serif-black"
            android:text="@string/coordinates"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_10"
            android:layout_marginTop="@dimen/margin_padding_30"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_lng"
            android:layout_width="@dimen/width_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_20"
            android:fontFamily="sans-serif-black"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/txt_lat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_lat"
            app:layout_constraintTop_toTopOf="@+id/txt_lat" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="@dimen/margin_padding_20"
            app:layout_constraintTop_toBottomOf="@+id/txt_lng">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_20"
                android:fontFamily="sans-serif-black"
                android:text="@string/pause_coordinates"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_get_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_get_location"
                android:layout_width="@dimen/width_30"
                android:layout_height="@dimen/width_30"
                android:layout_marginEnd="@dimen/margin_padding_20"
                android:backgroundTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:layout_marginStart="@dimen/margin_padding_20"
            android:layout_marginEnd="@dimen/margin_padding_20"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <ImageView
                android:id="@+id/btn_view_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_20"
                android:background="@android:drawable/ic_menu_send"
                android:backgroundTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_20"
                android:fontFamily="sans-serif-black"
                android:text="@string/show_location"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_view_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
